 * New icon type: Loss of Control (WoW 5.1+ only)
 * You may notice some slight changes to the way your text layouts appear, especially if you used the Constrain Width setting. You will have to re-adjust your old layouts to achieve old functionality, which will probably require adding a second anchor to any affected text displays.
 * New group option: Group Opacity
 * Bug Fixes:
 ** Conditions with minimum values less than zero should now allow for these values to be selected.
 ** The Show Timer Text option should now work properly with Tukui.
 ** You should no longer see an error randomly telling you that TMW can't do an action in combat when no action has been triggered.
 ** Logging in while in combat with Masque installed without the Allow Config in Combat option enabled should no longer leave icons in a mangled state.
 ** Logging in while in combat with the Allow Config in Combat option enabled should now have a much lower chance of triggering a 'script ran too long' error.
 ** Items whose cooldown durations are reported as being 0.001 seconds should no longer be treated as being usable.
 ** Added missing spells to the SpellDamageTaken equivalency
 ** Attempted a fix for error <string>:"Condition_SPELLDMG":3: Usage: GetSpellBonusDamage(school)
 
===v6.0.4===
 * **New icon event: On Condition Set Passing. Allows you to create an event handler that reacts to the state of a condition set.**
 * New icon event: On Icon Setup. Essentially allows you to have a "default state" for icon animations.
 * Added a dropdown menu to select an icon when right clicking a spot on your screen that contains multiple icons.
 * Conditions with no maximum value (e.g. Health/Mana; any condition that checks a time) now allow manual input of a value.
 * There is now an option to allow configuration while in combat (as opposed to allowing at all the time with potential bugs, the options module now loads at login when this option is enabled to prevent many errors and bugs).